cdk/cdk.out/MCP-VPC.template.json
{
 "Resources": {
  "MCPVPC68ADF9D1": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/Resource"
   }
  },
  "MCPVPCpublicSubnet1SubnetAEE1BC0E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/Subnet"
   }
  },
  "MCPVPCpublicSubnet1RouteTable2AFD7854": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/RouteTable"
   }
  },
  "MCPVPCpublicSubnet1RouteTableAssociation094A291E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MCPVPCpublicSubnet1RouteTable2AFD7854"
    },
    "SubnetId": {
     "Ref": "MCPVPCpublicSubnet1SubnetAEE1BC0E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/RouteTableAssociation"
   }
  },
  "MCPVPCpublicSubnet1DefaultRoute50B6BC7B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MCPVPCIGWEE21D79C"
    },
    "RouteTableId": {
     "Ref": "MCPVPCpublicSubnet1RouteTable2AFD7854"
    }
   },
   "DependsOn": [
    "MCPVPCVPCGW2A43A4FA"
   ],
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/DefaultRoute"
   }
  },
  "MCPVPCpublicSubnet1EIPC76C6EDA": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/EIP"
   }
  },
  "MCPVPCpublicSubnet1NATGateway552DB97D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MCPVPCpublicSubnet1EIPC76C6EDA",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MCPVPCpublicSubnet1SubnetAEE1BC0E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "DependsOn": [
    "MCPVPCpublicSubnet1DefaultRoute50B6BC7B",
    "MCPVPCpublicSubnet1RouteTableAssociation094A291E"
   ],
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet1/NATGateway"
   }
  },
  "MCPVPCpublicSubnet2Subnet6731BC96": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet2/Subnet"
   }
  },
  "MCPVPCpublicSubnet2RouteTable7C1C4A3A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/publicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet2/RouteTable"
   }
  },
  "MCPVPCpublicSubnet2RouteTableAssociation074D2346": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MCPVPCpublicSubnet2RouteTable7C1C4A3A"
    },
    "SubnetId": {
     "Ref": "MCPVPCpublicSubnet2Subnet6731BC96"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet2/RouteTableAssociation"
   }
  },
  "MCPVPCpublicSubnet2DefaultRoute948F5E91": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MCPVPCIGWEE21D79C"
    },
    "RouteTableId": {
     "Ref": "MCPVPCpublicSubnet2RouteTable7C1C4A3A"
    }
   },
   "DependsOn": [
    "MCPVPCVPCGW2A43A4FA"
   ],
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/publicSubnet2/DefaultRoute"
   }
  },
  "MCPVPCprivateSubnet1Subnet9FF5B958": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/privateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet1/Subnet"
   }
  },
  "MCPVPCprivateSubnet1RouteTable18384F47": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/privateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet1/RouteTable"
   }
  },
  "MCPVPCprivateSubnet1RouteTableAssociation9FD42CA2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MCPVPCprivateSubnet1RouteTable18384F47"
    },
    "SubnetId": {
     "Ref": "MCPVPCprivateSubnet1Subnet9FF5B958"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet1/RouteTableAssociation"
   }
  },
  "MCPVPCprivateSubnet1DefaultRoute5C6CF877": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MCPVPCpublicSubnet1NATGateway552DB97D"
    },
    "RouteTableId": {
     "Ref": "MCPVPCprivateSubnet1RouteTable18384F47"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet1/DefaultRoute"
   }
  },
  "MCPVPCprivateSubnet2Subnet5E0860C9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/privateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet2/Subnet"
   }
  },
  "MCPVPCprivateSubnet2RouteTable1CF7FAAD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/privateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet2/RouteTable"
   }
  },
  "MCPVPCprivateSubnet2RouteTableAssociationF8DDCCFE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MCPVPCprivateSubnet2RouteTable1CF7FAAD"
    },
    "SubnetId": {
     "Ref": "MCPVPCprivateSubnet2Subnet5E0860C9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet2/RouteTableAssociation"
   }
  },
  "MCPVPCprivateSubnet2DefaultRouteB938D4BD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MCPVPCpublicSubnet1NATGateway552DB97D"
    },
    "RouteTableId": {
     "Ref": "MCPVPCprivateSubnet2RouteTable1CF7FAAD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/privateSubnet2/DefaultRoute"
   }
  },
  "MCPVPCIGWEE21D79C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/IGW"
   }
  },
  "MCPVPCVPCGW2A43A4FA": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MCPVPCIGWEE21D79C"
    },
    "VpcId": {
     "Ref": "MCPVPC68ADF9D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/VPCGW"
   }
  },
  "MCPVPCRestrictDefaultSecurityGroupCustomResourceB286BFAB": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "MCPVPC68ADF9D1",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "661235013910"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "MCPVPCVpcFlowLogIAMRoleBE3D589A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "vpc-flow-logs.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/VpcFlowLog"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/VpcFlowLog/IAMRole/Resource"
   }
  },
  "MCPVPCVpcFlowLogIAMRoleDefaultPolicyD032C948": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MCPVPCVpcFlowLogLogGroupA0C9DF2F",
         "Arn"
        ]
       }
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MCPVPCVpcFlowLogIAMRoleBE3D589A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MCPVPCVpcFlowLogIAMRoleDefaultPolicyD032C948",
    "Roles": [
     {
      "Ref": "MCPVPCVpcFlowLogIAMRoleBE3D589A"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/VpcFlowLog/IAMRole/DefaultPolicy/Resource"
   }
  },
  "MCPVPCVpcFlowLogLogGroupA0C9DF2F": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731,
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/VpcFlowLog"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/VpcFlowLog/LogGroup/Resource"
   }
  },
  "MCPVPCVpcFlowLog0B8AB4F1": {
   "Type": "AWS::EC2::FlowLog",
   "Properties": {
    "DeliverLogsPermissionArn": {
     "Fn::GetAtt": [
      "MCPVPCVpcFlowLogIAMRoleBE3D589A",
      "Arn"
     ]
    },
    "LogDestinationType": "cloud-watch-logs",
    "LogGroupName": {
     "Ref": "MCPVPCVpcFlowLogLogGroupA0C9DF2F"
    },
    "ResourceId": {
     "Ref": "MCPVPC68ADF9D1"
    },
    "ResourceType": "VPC",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MCP-VPC/MCP-VPC/VpcFlowLog"
     },
     {
      "Key": "Project",
      "Value": "MCP-Servers-On-AWS"
     }
    ],
    "TrafficType": "ALL"
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/MCP-VPC/VpcFlowLog/FlowLog"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:661235013910:security-group/",
             {
              "Fn::GetAtt": [
               "MCPVPC68ADF9D1",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-661235013910-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22QQU/DMAyFfwv3NECFhDiOCaZJaIs6tCtKU69ka+MqcVqhqv8dt93ohZM/PztPL05l+vgiH+50FxJTXJLK5rI/kDYXwdJXDyaV/bExYn1yR7UWKuaVNYeYO6BRWyjDSPCp8woWfdFWIaCxmiy6v+UR3rZqLDtNG03Q6R+hvG0ZF+OtI/DMt4U5ybVbEWf9rsGReK+w+8BynF9xEFbXss9wzjRVhZx/MplpEBWWQfa8vvEYm3Fy42EQGQSM3vD7GAjrpWW7/0fKY2sL8K86gOBvA/E5S+umYPtITaRBOCxAnsN9mz7JZz7/OVib+OjI1iCzuf4CcvLCF5sBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "MCP-VPC/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "The ID of the created VPC",
   "Value": {
    "Ref": "MCPVPC68ADF9D1"
   }
  },
  "ExportsOutputRefMCPVPC68ADF9D1105DCCDE": {
   "Value": {
    "Ref": "MCPVPC68ADF9D1"
   },
   "Export": {
    "Name": "MCP-VPC:ExportsOutputRefMCPVPC68ADF9D1105DCCDE"
   }
  },
  "ExportsOutputRefMCPVPCpublicSubnet1SubnetAEE1BC0E66B595D5": {
   "Value": {
    "Ref": "MCPVPCpublicSubnet1SubnetAEE1BC0E"
   },
   "Export": {
    "Name": "MCP-VPC:ExportsOutputRefMCPVPCpublicSubnet1SubnetAEE1BC0E66B595D5"
   }
  },
  "ExportsOutputRefMCPVPCpublicSubnet2Subnet6731BC9603C67782": {
   "Value": {
    "Ref": "MCPVPCpublicSubnet2Subnet6731BC96"
   },
   "Export": {
    "Name": "MCP-VPC:ExportsOutputRefMCPVPCpublicSubnet2Subnet6731BC9603C67782"
   }
  },
  "ExportsOutputRefMCPVPCprivateSubnet1Subnet9FF5B95861818854": {
   "Value": {
    "Ref": "MCPVPCprivateSubnet1Subnet9FF5B958"
   },
   "Export": {
    "Name": "MCP-VPC:ExportsOutputRefMCPVPCprivateSubnet1Subnet9FF5B95861818854"
   }
  },
  "ExportsOutputRefMCPVPCprivateSubnet2Subnet5E0860C9E75204C0": {
   "Value": {
    "Ref": "MCPVPCprivateSubnet2Subnet5E0860C9"
   },
   "Export": {
    "Name": "MCP-VPC:ExportsOutputRefMCPVPCprivateSubnet2Subnet5E0860C9E75204C0"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
